tests/negative/traits/impl-for-addr.orng
impl for &mut Int {
    fn a (self, x: Int) -> () {self^ += x}
}

fn main() -> Int {
    3
}